remove diskGrid/useDisk so we only do the uncompressed queries once